kubernetes/services/mongodb-headless-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mongodb-headless-service
  namespace: hotel-project

spec:
  clusterIP: None
  publishNotReadyAddresses: true

  selector:
    app: mongodb-replica

  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
