kubernetes/services/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend-ingress
  namespace: hotel-project

  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
    - host: localhost

      http:
        paths:

          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific

            backend:
              service:
                name: backend-service

                port:
                  number: 5000

          - path: /mongo(/|$)(.*)
            pathType: ImplementationSpecific

            backend:
              service:
                name: mongo-express-service

                port:
                  number: 8081
