kubernetes/services/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-ingress
  namespace: hotel-project

spec:
  ingressClassName: nginx

  rules:
    - host: localhost

      http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /mongo
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
